# STModuleManager

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.ko.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: deploy-web.yml  release.yml
crates/optimizer/: Cargo.toml
crates/optimizer/src/: lib.rs
docs/: usage-desktop.md  usage-web.md
shared/: stats.ts  types.ts
src/: i18n.ts  main.ts  style.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  modules_db.rs  optimizer.rs  settings.rs
src-tauri/src/packets/: capture.rs  mod.rs  opcodes.rs  protobuf.rs  reassembler.rs  utils.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: _headers  licenses.json  robots.txt  sitemap.xml
web/src/: i18n.ts  inventory-store.ts  main.ts  ocr-store.ts  ocr.ts  style.css  wasm-worker.ts
web/wasm/: Cargo.toml
web/wasm/src/: lib.rs
