[package]
name = "module-manager"
version = "0.2.2"
edition = "2021"

[lib]
name = "module_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "STModuleManager"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
windivert = { version = "0.6.0", features = ["vendored"] }
etherparse = "0.19.0"
byteorder = "1.5.0"
zstd = "0.13.3"
rayon = "1.10"
star-optimizer = { path = "../crates/optimizer", features = ["parallel"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
